--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
     margin: 0px;
 }
 
+@font-face {
+    font-family: 'Hanken';
+    src: url(assets/fonts/HankenGrotesk-VariableFont_wght.ttf) format(truetype);
+}
+
 :root {
     --reaction: hsl(0, 100%, 67%);
     --memory: hsl(39, 100%, 56%);
@@ -15,31 +20,170 @@
 
     --cor3: hsla(256, 72%, 46%, 1);
     --cor4: hsla(241, 72%, 46%, 0);
+
+    --cor5: hsl(224, 30%, 27%);
+    --cor6: hsl(241, 100%, 89%);
+
+    --hanken: 'Hanken'
 }
 
 div#result {
     background-image: linear-gradient(to bottom, var(--cor1), var(--cor2));
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--hanken);
     width: 350px;
-    height: 450px;
-    border-radius: 15px;
+    height: 500px;
+    border-radius: 35px;
     padding: 15px;
+    text-align: center;
 
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-90%, -50%);
+
+    color: hsla(241, 100%, 89%, 0.753);
+    z-index: 2;
+
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.320);
 }
 
 div#circle {
-    background-color: var(--cor3);
-    border-radius: 100%;
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor4));
+    border-radius: 50%;
     text-align: center;
+    vertical-align: middle;
+    font-weight: 700;
 
-    height: 150px;
+    width: 190px;
+    height: 190px;
+    margin: auto;
+    margin-top: 30px;
+
+}
+
+div#rodape {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, 60%);
+    width: 260px;
+
+}
+
+div#p {
+    font-size: 4.3em;
+    color: rgba(255, 255, 255, 0.900);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -135%);
+}
+div#of {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -160%);
+}
+
+h1 {
+    margin-top: 15px;
+}
+h1#t {
+    color: rgb(78, 76, 76);
+    margin-bottom: 25px;
+}
+h2 {
+    margin-top: 0px;
+    color: rgba(255, 255, 255, 0.900);
+    margin-bottom: 11px;
+    font-weight: 700;
+    font-family: var(--hanken);
+    font-size: 1.8em;
 }
 p {
     font-size: 18px;
+}
+
+div#summary {
+    z-index: 1;
+    background-color: white;
+    font-family: var(--hanken);
+    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.320);
+    padding: 15px;
+    padding-left: 80px;
+    width: 350px;
+    height: 500px;
+    border-radius: 0px 30px 30px 0px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(0%, -50%);
+}
+
+div.model {
+    border-radius: 5px;
+    padding: 15px;
+    padding-left: 40px;
+    margin-top: 15px;
+    width: 265px;
+    font-size: 1.3em;
+    font-weight: 700;
+
+    position: relative;
+}
+
+div.reaction {
+    color: hsla(0, 100%, 67%, 0.650);
+    background-color: hsla(0, 100%, 67%, 0.070);
+}
+div.memory {
+    color: hsla(39, 100%, 56%, 0.650);
+    background-color: hsla(39, 100%, 56%, 0.070);
+}
+div.verbal {
+    color: hsl(166, 100%, 37%, 0.650);
+    background-color: hsl(166, 100%, 37%, 0.070);
+}
+div.visual {
+    color: hsl(234, 85%, 45%, 0.650);
+    background-color: hsl(234, 85%, 45%, 0.070);
+}
+
+
+
+div.number {
+    color: rgb(66, 65, 65);
+    display: inline;
+    font-weight: 700;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+}
+div.total {
+    color: rgba(128, 128, 128, 0.507);
+    display: inline;
+    font-weight: 700;
+
+    position: absolute;
+    top: 0%;
+    right: -690%;
+}
+div.l1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+}
+div.l2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
 
 
